--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=1024" />
+        <meta property="og:title" content = "Easy Demon List"/>
+        <meta property="og:description" content = "A website for the Easy Demon List project, meant to rank the hardest demons of such difficulty in Geometry Dash"/>
+        <meta property="og:url" content = "https://easydemonlist.pages.dev"/>
+        <meta property="og:image" content = "https://easydemonlist.pages.dev/20250702_161319.png"/>
         <title>Easy Demon List</title>
 
         <!-- Replace your server icon by uploading an image file named "list_icon.png"-->
