--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta property="og:description" content = "A website for the Easy Demon List project, meant to rank the hardest demons of such difficulty in Geometry Dash"/>
         <meta property="og:url" content = "https://easydemonlist.pages.dev"/>
         <meta property="og:image" content = "https://easydemonlist.pages.dev/20250702_161319.png"/>
+        <meta name="google-site-verification" content="lqGDtQUebn_5yO5lnBNWPHNGSSxtq4oX4wU2YK4usDc" />
         <title>Easy Demon List</title>
 
         <!-- Replace your server icon by uploading an image file named "list_icon.png"-->
