--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Easy Demons List</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=1024" />
         <meta property="og:title" content = "Easy Demon List"/>
