--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
+                <h1 style="display:none;">Easy Demon List</h1>
                 <h2>EDL</h2>
                 <p>v1.1.0</p>
             </div>
